Thu Oct 21 22:19:35 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* lex.h (Lex): Change union into struct and have only one Tag entry.
	* commands.c, symbol.c, local.c, area.c, variables.c, expr.c, macros.c,
	input.c, lexAcorn.c, get.c, lex.c: Follow Lex change.

Thu Oct 21 22:02:28 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* value.h (Value): Change union into struct and have only one Tag
	entry.
	* commands.c, symbol.c, put.c, code.c, m_cpuctrl.c, help_cop.c,
	m_cpumem.c, storage.c, area.c, variables.c, value.c, output.c,
	m_fpumem.c, m_fpu.c, whileif.c, input.c, help_eval.c, reloc.c, get.c,
	asm.c, eval.c, lit.c: Follow Value change.

Thu Oct 21 02:01:34 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>
  
	* regression/tests_pass/record_basic.s: Enabled the disabled sub-tests
	as they are now supported and working.
	* regression/tests_fail/record_basic_fail.s: Removed.
	* regression/Makefile (EXTENSION): Define as assembler boolean.
	* regression/tests_pass/operator_string.s (EXTENSION): Test on it for
	features which objasm does not know about.
	* regression/tests_pass/operator_shift.s: Likewise.
	* regression/tests_pass/operator_relational.s: Likewise.  Add :LEOR:
	test.
	* regression/tests_pass/operator_index.s: Add :BASE: tests.
	* regression/tests_pass/operator_boolean.s: Added.
	* regression/tests_pass/operator_addition_logical.s: Likewise.
	* regression/tests_pass/operator_unary.s: Likewise.
	* symbol.c (symbolPrintAll): Added.
	(symbolPrint): Made used by symbolPrintAll.
	* symbol.h (symbolPrintAll, symbolPrint): Add/tune prototype.
	* code.h (CODE_SIZECODE, CODE_SIZESTACK, CODE_SIZELATE): Move to...
	* code.c: ...here.
	(codePrint): Added, and other DEBUG code as well.
	(Sp): Removed.
	(codeStorage): Make difference between register based record and a non
	register based one.
	* decode.c: Whitespace changes.
	(decode): Constify parameter.
	* decode.h (decode): Constify parameter.
	* local.c (c_rout, c_local): Constify parameter.